# solana-vanity-keypair-cpu

./: .gitignore  Cargo.toml  README.md  build.py  setup.py  test.py  test_b58.py
src/: lib.rs  main.rs
vanity_search/: __init__.py
