[package]
name = "vanity_search"
version = "0.1.0"
edition = "2021"

[lib]
name = "vanity_search"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
rayon = "1.7"
ed25519-dalek = "1.0"
bs58 = "0.5"
rand = "0.7"
parking_lot = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3