[package]
name = "vanity_search"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
ed25519-dalek = "1.0"
rand = "0.7"
bs58 = "0.5"
parking_lot = "0.12"
ctrlc = "3.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = false
overflow-checks = false